--- a/config/avia.yaml
+++ b/config/avia.yaml
@@ -2,7 +2,7 @@ common:
   img_topic: "/left_camera/image"
   lid_topic: "/livox/lidar"
   imu_topic: "/livox/imu"
-  img_en: 1
+  img_en: 0
   lidar_en: 1
   ros_driver_bug_fix: false
 
@@ -74,10 +74,10 @@ publish:
 
 evo:
   seq_name: "CBD_Building_01"
-  pose_output_en: false
+  pose_output_en: true
 
 pcd_save:
-  pcd_save_en: false
+  pcd_save_en: true
   colmap_output_en: false # need to set interval = -1
   filter_size_pcd: 0.15
   interval: -1
